Fix alignment of dropdown arrow of combobox

--- a/source/resources/styles/QComboBox.css
+++ b/source/resources/styles/QComboBox.css
@@ -27,5 +27,6 @@ QComboBox::drop-down {
 
 QComboBox::down-arrow {
 	image: url(:resources/icons/drop_down_arrow.svg);
+	padding-right: 6px;
 }
 
